; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-engine.c_hash_req_remove.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-engine.c_hash_req_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.forth_request = type { i64, %struct.forth_request* }

@REQ_HASH_SIZE = common dso_local global i32 0, align 4
@H = common dso_local global %struct.forth_request** null, align 8
@requests_in_hash = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.forth_request*)* @hash_req_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_req_remove(%struct.forth_request* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.forth_request*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.forth_request**, align 8
  %7 = alloca %struct.forth_request*, align 8
  store %struct.forth_request* %0, %struct.forth_request** %3, align 8
  %8 = load %struct.forth_request*, %struct.forth_request** %3, align 8
  %9 = getelementptr inbounds %struct.forth_request, %struct.forth_request* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %4, align 8
  %11 = load i64, i64* %4, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i32, i32* @REQ_HASH_SIZE, align 4
  %14 = sub nsw i32 %13, 1
  %15 = and i32 %12, %14
  store i32 %15, i32* %5, align 4
  %16 = load %struct.forth_request**, %struct.forth_request*** @H, align 8
  %17 = load i32, i32* %5, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds %struct.forth_request*, %struct.forth_request** %16, i64 %18
  store %struct.forth_request** %19, %struct.forth_request*** %6, align 8
  br label %20

20:                                               ; preds = %37, %1
  %21 = load %struct.forth_request**, %struct.forth_request*** %6, align 8
  %22 = load %struct.forth_request*, %struct.forth_request** %21, align 8
  %23 = icmp ne %struct.forth_request* %22, null
  br i1 %23, label %24, label %40

24:                                               ; preds = %20
  %25 = load %struct.forth_request**, %struct.forth_request*** %6, align 8
  %26 = load %struct.forth_request*, %struct.forth_request** %25, align 8
  store %struct.forth_request* %26, %struct.forth_request** %7, align 8
  %27 = load %struct.forth_request*, %struct.forth_request** %7, align 8
  %28 = load %struct.forth_request*, %struct.forth_request** %3, align 8
  %29 = icmp eq %struct.forth_request* %27, %28
  br i1 %29, label %30, label %37

30:                                               ; preds = %24
  %31 = load %struct.forth_request*, %struct.forth_request** %7, align 8
  %32 = getelementptr inbounds %struct.forth_request, %struct.forth_request* %31, i32 0, i32 1
  %33 = load %struct.forth_request*, %struct.forth_request** %32, align 8
  %34 = load %struct.forth_request**, %struct.forth_request*** %6, align 8
  store %struct.forth_request* %33, %struct.forth_request** %34, align 8
  %35 = load i32, i32* @requests_in_hash, align 4
  %36 = add nsw i32 %35, -1
  store i32 %36, i32* @requests_in_hash, align 4
  store i32 1, i32* %2, align 4
  br label %41

37:                                               ; preds = %24
  %38 = load %struct.forth_request*, %struct.forth_request** %7, align 8
  %39 = getelementptr inbounds %struct.forth_request, %struct.forth_request* %38, i32 0, i32 1
  store %struct.forth_request** %39, %struct.forth_request*** %6, align 8
  br label %20

40:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %41

41:                                               ; preds = %40, %30
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
